--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Resetting margins and paddings for all elements */
 * {
     margin: 0;
     padding: 0;
@@ -14,13 +13,18 @@ body {
 
 header {
     text-align: center;
-    padding: 20px;
-    background-color: #352F44;
+    padding: 50px;
     color: white;
+    text-shadow: 2px 2px gray;
+    /* https://uigradients.com/#AquaMarine */
+    background: -webkit-linear-gradient(to right, #1a2980, #26d0ce);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #1a2980, #26d0ce);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 nav {
-    background-color: #5C5470;
+    background-color: #1a2980;
     padding: 10px 0;
     text-align: center;
 }
@@ -28,7 +32,7 @@ nav {
 nav a {
     padding: 10px 20px;
     margin: 0 10px;
-    color: #B9B4C7;
+    color: white;
     text-decoration: none;
     border-radius: 5px;
 }
@@ -40,8 +44,22 @@ main {
 
 footer {
     width: 100%;
-    text-align: center;
+    display: flex;
     padding: 20px;
-    background-color: #B9B4C7;
-    color: #352F44;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    /* https://uigradients.com/#Stellar */
+    background: -webkit-linear-gradient(to right, #7474bf, #348ac7);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #7474bf, #348ac7);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+footer a:link {
+    color: white;
+}
+
+.footer-sloupec {
+    margin: 0 10px;
 }
