--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ footer a:link {
     height: auto;
 }
 
-.textRight {
+.text-right {
     flex: 1;
     text-align: left;
     font-size: 275%;
@@ -199,7 +199,7 @@ footer a:link {
     text-align: center;
 }
 
-.textLeft {
+.text-left {
     flex: 1;
     text-align: right;
     font-size: 275%;
@@ -230,13 +230,13 @@ footer a:link {
         font-size: 250%;
     }
 
-    .textRight {
+    .text-right {
         font-size: 175%;
         margin-top: 30px;
         margin-left: 0px;
     }
 
-    .textLeft {
+    .text-left {
         font-size: 175%;
         margin-bottom: 30px;
         margin-right: 0px;
