--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ footer a:link {
     padding-top: 130px;
 }
 
-.why {
+.title {
     font-size: 250%;
     color: #1a2980;
     text-shadow: 2px 2px white;
@@ -213,7 +213,84 @@ footer a:link {
     height: 1px;
     background: linear-gradient(to right, transparent, #1a2980, transparent);
     margin: 20px 0;
-  }
+}
+
+.container2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.box {
+    width: 50%;
+    height: 50%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.title2 {
+    font-size: 200%;
+    color: #1a2980;
+    text-shadow: 2px 2px white;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+form {
+    width: 75%;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: gray;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    color: black;
+}
+
+input,
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+textarea {
+    height: 100px;
+}
+
+button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #007BFF;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
 
 @media (max-width: 768px) {
     nav ul {
@@ -241,6 +318,15 @@ footer a:link {
         margin-bottom: 30px;
         margin-right: 0px;
     }
+
+    .container2 {
+        flex-direction: column;
+    }
+
+    form {
+        width: 100%;
+    }
+
 }
 
 @media (min-width: 768px) {
