--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,33 @@ textarea {
 .maps-iframe {
     width: 90%;
     height: 500px;
+    border: 0px;
+}
+
+table {
+    width: 80%;
+    margin: 20px auto;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #348ac7;
+    color: white;
+}
+
+tr {
+    background-color: white;
+}
+
+tr:hover {
+    background-color: #f9f9f9;
 }
 
 @media (max-width: 768px) {
