--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,7 @@ footer a:visited {
     align-items: center;
 }
 
+/* titulek pro contact.html */
 .title2 {
     font-size: 200%;
     color: #1a2980;
