--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ footer a:visited {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-color: #1a2980;
     width: 100%;
     height: 400px;
 }
